[gd_scene load_steps=8 format=3 uid="uid://chsgobdmaercf"]

[ext_resource type="Script" path="res://Events/Outro/outro.gd" id="1_q37qc"]
[ext_resource type="Texture2D" uid="uid://dl8yem5hvdoh2" path="res://Player/ship.png" id="2_8vm2o"]
[ext_resource type="Script" path="res://Events/Outro/player.gd" id="3_bugok"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1kpx1"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_fdc1w"]
offsets = PackedFloat32Array(0.0327869, 0.245902, 0.811475, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qpmio"]
gradient = SubResource("Gradient_fdc1w")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8iq16"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(960, 540, 1)
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 0.5
initial_velocity_max = 1.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_max = 5.0
color_ramp = SubResource("GradientTexture1D_qpmio")
anim_offset_max = 1.0

[node name="Outro" type="Node2D"]
script = ExtResource("1_q37qc")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0431373, 0.0431373, 0.0431373, 1)

[node name="StarsParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_1kpx1")
position = Vector2(960, 540)
amount = 100
process_material = SubResource("ParticleProcessMaterial_8iq16")
lifetime = 60.0
preprocess = 60.0
fixed_fps = 0
visibility_rect = Rect2(-960, -540, 1920, 1080)

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(960, 700)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_8vm2o")
script = ExtResource("3_bugok")

[node name="FadeInTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FadeInRect" type="ColorRect" parent="."]
z_index = 2
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="FadeOutTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="FadeOutRect" type="ColorRect" parent="."]
z_index = 2
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)

[connection signal="timeout" from="FadeInTimer" to="." method="_on_fade_in_timer_timeout"]
[connection signal="timeout" from="FadeOutTimer" to="." method="_on_fade_out_timer_timeout"]
